# OfficeUnprotector

./: .gitignore  README.md  pyproject.toml  requirements.txt  unprotect.py  unprotect_gui.py
.github/workflows/: ci.yml
