[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "office-unprotector"
version = "1.0.0"
description = "A command-line tool to remove password protection from PDF and Office files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# str | None union syntax (PEP 604) requires Python 3.10+
# Tested on 3.10, 3.11, 3.12 across Ubuntu, Windows, macOS

keywords = [
    "pdf", "xlsx", "docx", "pptx",
    "unprotect", "unlock", "password", "office", "office365",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "msoffcrypto-tool>=5.0.0",   # file-level Office encryption/decryption
    "pypdf>=4.0.0",              # PDF reading, decryption, and writing
    "lxml>=4.9.0",               # fast XML manipulation for Office ZIP internals
    "customtkinter>=5.0.0",     # modern GUI toolkit (bundled GUI)
]

[project.optional-dependencies]
# Pulled in automatically by lxml on most platforms, listed explicitly for
# environments that build from source (e.g. Alpine Linux, musl-based images).
lxml-html-clean = ["lxml-html-clean"]

dev = [
    "openpyxl>=3.1.0",    # generate .xlsx test fixtures
    "python-pptx>=1.0.0", # generate .pptx test fixtures
    "python-docx>=1.1.0", # generate .docx test fixtures
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
unprotect = "unprotect:main"

[project.urls]
Homepage      = "https://github.com/Yeongwonhan-Jeolmang/OfficeUnprotector"
Repository    = "https://github.com/Yeongwonhan-Jeolmang/OfficeUnprotector"
"Bug Tracker" = "https://github.com/Yeongwonhan-Jeolmang/OfficeUnprotector/issues"
Changelog     = "https://github.com/Yeongwonhan-Jeolmang/OfficeUnprotector/blob/main/CHANGELOG.md"

# ── Setuptools ────────────────────────────────────────────────────────────────

[tool.setuptools]
# Both the CLI module and the GUI module are single-file modules.
py-modules = ["unprotect", "unprotect_gui"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["unprotect"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "except ImportError:",   # optional-dep guards are tested by CI, not unit tests
]